== 3/Jun/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b84.zip V1.6-b84]  ==

''' Jetty '''

Ensure any time an INIT is received from a client, re send startup macros etc. Helps to better handle user reloading the web  page.

Change session counting to not add a new session count if the user is already logged in; instead invalidate the first session.

Implemented form based authentication. A login.html and login_fail.html file must be added to the to level web server root.  Resolves issue [ticket:728]

''' User Manager '''

The user manager URL has changed to /UserManager/Users.
A logout function has been added to the user manager.
For authentication the user manager requires two files, login_UserMgr.html and login_fail_UserMgr.html to be in the top level of the web server. 
Their format is similar to the login.html and login_fail.html files (a sample has been provided in the client_build/standalone SVN path)

== 29/Apr/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b83.zip V1.6-b83]  ==

''' Groovy models '''

Added a method to unit test groovy models.. See groovy model documentation for details. Implements [ticket:718]

''' Security '''

Improved counter of active sessions.

''' Multimedia '''

Improved compatability between Track lists , album lists etc. and web clients.

== 6/Apr/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b82.zip V1.6-b82]  ==

''' All audio '''

Resolved an issue where flash AUDIO commands would only include the first extra field.

''' Tutondo '''

Added a delay within the poll to help ensure the GC100 has time to clear it's buffer  [ticket:695]

== 27/Mar/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b81.zip V1.6-b81]  ==

''' Scripts '''

Added a simple way to test how long since an item has been updated, minutesSinceChanged

{{{

   try {
		if (elife.isOff  ("HOLIDAY_MODE")   && elife.isOn  ("MASTER_BED_LIGHT")) {
			if (minutesSinceChanged("MASTER_BED_PIR")  > autoLightOffInterval) {